-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Networking & Observability
-
Fully Compatible
-
ALL
-
N&O 2025-09-15, N&O 2025-09-29, N&O 2025-10-13, N&O 2025-10-27
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Data race condition
The value of the shared data will be determined by the interleaving of thread execution. Thread shared data is accessed without holding an appropriate lock, possibly causing a race condition
/data/mci/4fce031de9267fb3c47945a835ecc176/bazel_cache/e4de32cbb3cd53654b52f9247a499e3e/execroot/_main/src/mongo/db/ftdc/controller.cpp:165: MISSING_LOCK 145234 Accessing "this->_path" without holding lock "mongo::FTDCController._mutex". Elsewhere, "mongo::FTDCController._path" is written to with "FTDCController._mutex" held 1 out of 1 times.
- is related to
-
SERVER-109414 Coverity analysis defect 151359: Data race condition
-
- Closed
-