SERVER-110038 Synchronize before reading `FTDCController::_path` (#43163)

GitOrigin-RevId: 31c334564f38b6177948a3cf42d7c00b933b0db1